--- a/A3.html
+++ b/A3.html
@@ -143,13 +143,13 @@
       <section>
         <h2>Team Registration</h2>
         <p>
-          For this assignment you should work in <strong>teams of 3-4 students</strong>. You should attempt to find project partners that you will continue to work with for the final project.
+          For this assignment you should work in <strong>teams of 1-3 students</strong> (students taking the class for TQE credit must work individually). 
         </p>
         <p>
-          As soon as you have formed a team and chosen a dataset, you must submit a <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWnI5YiMEpKclQyvDYqk2LM8QHg1Rcb7ascXNtlpuBYvXiCg/viewform?usp=sf_link">team registration form</a>. Your form must include the names, MIT email addresses, and GitHub usernames of each team member, along with a concise title for your interactive visualization. If you are looking for project partners, please post to Piazza to find classmates with similar interests! You should submit your team registration by <strong>Mon 3/4, noon</strong>.
+          As soon as you have formed a team and chosen a dataset, you must submit a <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWnI5YiMEpKclQyvDYqk2LM8QHg1Rcb7ascXNtlpuBYvXiCg/viewform?usp=sf_link">team registration form</a>. Your form must include the names and MIT Kerberos of each team member, along with a concise title for your interactive visualization. If you are looking for project partners, please <a href="https://piazza.com/class/jrc6epsrssu1in">post to Piazza</a> to find classmates with similar interests! You should submit your team registration by <strong>Mon 3/4, noon</strong>.
         </p>
         <p>
-          After the proposal deadline, we will assign your team a repository in the <a href="https://github.com/mitvis">MIT Vis GitHub Organization</a>. We will name your repository based on the visualization title you provide in your registration form (so choose wisely!). See below for details about what your repository must contain at submission time.
+          After the proposal deadline, we will assign your team a repository in the <a href="https://github.mit.edu/6894-sp19">6.894 organization</a> on the MIT GitHub. We will name your repository based on the visualization title you provide in your registration form (so choose wisely!). See below for details about what your repository must contain at submission time.
         </p>
       </section>
 
@@ -165,7 +165,7 @@
           Implement your interactive graphic and deploy it to the web. We expect most students will use D3.js for this assignment; however, you are free to use other web-based libraries in addition to or instead of D3. Your graphic should not require customized server-side support; you should simply load data from a static data file or public web API.
         </p>
         <p>
-          You should use <a href="https://help.github.com/articles/user-organization-and-project-pages/#project-pages">GitHub pages to host your visualization</a> from your project repository. We recommend keeping everything (development files and website) in your master branch: either serve your website from the root folder or from the "/docs" folder. Your repo must also contain the (unobfuscated) source code for your visualization.
+          You should use <a href="https://help.github.com/en/enterprise/2.13/user/articles/configuring-a-publishing-source-for-github-pages">GitHub pages to host your visualization</a> from your project repository. We recommend keeping everything (development files and website) in your master branch: either serve your website from the root folder or from the "/docs" folder. Your repo must also contain the (unobfuscated) source code for your visualization.
         </p>
         <p>
           Your deployed webpage should also include a write-up with the following components:
@@ -183,7 +183,7 @@
       <section>
         <h2>Grading Criteria</h2>
         <p>
-          Projects that squarely meet the requirements for the assignment will receive a score of 9 (A). Going beyond the call of duty can net additional points, for example:
+          Projects that squarely meet the requirements for the assignment will receive a score of 9 out of 10. Going beyond the call of duty can net additional points, for example:
           </p><ul>
             <li>advanced interaction techniques</li>
             <li>novel visualization elements</li>
@@ -213,7 +213,7 @@
 
           <p>
             You must have a working prototype online by <strong>Wed 3/13, noon</strong>. Your prototype should be accessible on GitHub pages using a URL of the form:<br>
-            <tt>https://mitvis.github.io/YOUR-A3-PROJECT-NAME/</tt>
+            <tt>https://github.mit.edu/pages/6894-sp19/YOUR-A3-PROJECT-NAME/</tt>
           </p>
 
           <p>
