--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <li><a href="#readings">Reading Commentaries</a> &ndash; 10%</li>
           <li><a href="A1.html">Assignment 1: Visualization Design</a> &ndash; 7.5%</li>
           <li><a href="A2.html">Assignment 2: Exploratory Data Analysis</a> &ndash; 12.5%</li>
-          <li>Assignment 3: Interactive Visualization Prototype (+ Peer Evaluation) &ndash; 25%</li>
+          <li><a href="A3.html">Assignment 3: Interactive Visualization Prototype (+ Peer Evaluation)</a> &ndash; 25%</li>
           <li>Final Project &ndash; 40%</li>
         </ul>
 
