Updates to schedule + FP.

--- a/FP.html
+++ b/FP.html
@@ -130,8 +130,11 @@
               <section>
         <h1>Final Project</h1>
         <p>
-          The purpose of the final project is to provide hands-on experience designing, implementing, and evaluating a visualization method, algorithm or tool. Projects will be carried out by a teams of 1-5 people. Your project should address a concrete visualization problem and propose a novel, creative solution. The final deliverable will be an implementation of the proposed solution and a paper written in the format of a conference paper submission. Though the majority of projects concern the development of a software artifact, design studies or evaluations of visualization techniques may also be acceptable projects — please talk to the course staff if you have questions.
+          The purpose of the final project is to provide hands-on experience designing, implementing, and evaluating a visualization method, algorithm or tool. Projects will be carried out by a <strong>teams of 1-3 people</strong>. Your project should address a concrete visualization problem and propose a novel, creative solution. The final deliverable will be an implementation of the proposed solution and a paper written in the format of a conference paper submission. Though the majority of projects concern the development of a software artifact, design studies or evaluations of visualization techniques may also be acceptable projects — please talk to the course staff if you have questions.
         </p>
+
+        <p><strong>In collaboration with partnering MIT and Harvard researchers, we have several exciting <a href="https://learning-modules.mit.edu/materials/index.html?uuid=/course/6/sp19/6.894#materials">final project suggestions</a> for you to consider!</strong></p>
+
         <p>
           In addition, you will be responsible for participating in a design review and presenting your final results. At the end of the quarter we will have a public showcase for you to share your work with both your colleagues and invited guests.
         </p>
@@ -148,13 +151,13 @@
           </li>
           <li>
             <a href="#review">Milestone Review</a> &nbsp; <b></b>
-            (Review meetings <b>4/17</b>)
+            (Review meetings <b>4/22</b> or <b>4/24</b>)
           </li>
           <li>
-            <a href="#final">Final Project Deliverables</a> &nbsp; <b>due 4/22 noon</b>
+            <a href="#final">Final Project Deliverables</a> &nbsp; <b>due 5/13 noon</b>
           </li>
           <li>
-            <a href="#poster">Final Project Poster Presentation</a> &nbsp; <b>5/13</b>
+            <a href="#poster">Final Project Poster Presentation</a> &nbsp; <b>5/13</b> (tentatively 3–5pm)
           </li>
       </ul></section>
 
@@ -167,7 +170,7 @@
           <p>
             <a href="https://goo.gl/forms/jdxY6buDXXyUijHh2">Register your team in our Google Docs form.</a>
             Similar to A3, we will use form responses to generate GitHub teams and repos for final submissions.
-            Unless granted instructor permission, you may <b>not</b> work in groups larger than 4 people.
+            Unless granted instructor permission, you may <b>not</b> work in groups larger than 3 people.
             If you are looking for project partners, please post to Piazza!
           </p>
           <p>
@@ -178,23 +181,24 @@
         <section id="review">
           <h2>Milestone Review</h2>
           <p>
-            Develop an initial prototype of your project and publish your work in your GitHub repo. If applicable, publish any web-based visualizations using GitHub pages, similar to A3. Your work will be reviewed by the course staff to provide feedback on your designs and progress. It is fine if your project is not yet in a "complete" state; however, by this point you should have made substantive progress, including working (if rough) prototypes of your main visualizations and interactions.
+            Develop an initial prototype of your project and publish your work in your GitHub repo. If applicable, publish any web-based visualizations using GitHub pages, similar to A3. Your work will be reviewed by the course staff and critiqued by your peers (similar to A3) to provide feedback on your designs and progress. It is fine if your project is not yet in a "complete" state; however, by this point you should have made substantive progress, including working (if rough) prototypes of your main visualizations and interactions.
           </p>
+
           <p>
-            Your milestone materials should be pushed to GitHub by <b>4/17 noon</b>. Our class sessions on Wed 4/17 will be used for design review appointments between your teams and the course staff.
+            Your milestone materials should be pushed to GitHub by <b>4/22 noon</b>. Our class sessions on Mon 4/22 and Wed 4/24 will be used for design review presentations.
           </p>
         </section>
 
         <section id="final">
           <h2>Final Deliverables</h2>
           <p>
-            Submit final deliverables in your Github Repo by <b>4/22 noon</b>.
+            Submit final deliverables in your Github Repo by <b>5/13 noon</b>.
           </p>
           <p>
             The final deliverables include:
           </p>
           <ul>
-            <li><b>Poster:</b> a PDF file of your poster from the presentation. </li>
+            <li><b>Poster:</b> a PDF file of your poster from the presentation.</li>
             <li><b>Paper:</b> a 2-4 page paper (not counting references) written in the form of a conference paper submission. The paper should present your goals, related work, a detailed description of your system, and a discussion of your design.</li>
             <li><b>Project Page:</b> List title, team members, summary image, abstract, link to paper, poster, running instructions for the software and other optional materials. Host the page with Github Pages.</li>
             <li><b>Readme File:</b> In the repository's <i>readme.md</i>, include a breakdown of how the work was split among the group members and a commentary on the project process.</li>
@@ -203,7 +207,7 @@
           </ul>
 
           <h3>Paper</h3>
-          <p>The final paper should be in the style of a conference paper submission. The paper might include content that is typical of papers that appear at <a href="http://ieeevis.org/">IEEE VIS</a>, or <a href="http://chi2018.acm.org/">CHI</a>. In particular it should contain:</p>
+          <p>The final paper should be in the style of a conference paper submission. The paper might include content that is typical of papers that appear at <a href="http://ieeevis.org/">IEEE VIS</a>, or <a href="http://chi2019.acm.org/">CHI</a>. In particular it should contain:</p>
           <ul>
             <li><b>Introduction</b> – An explanation of the problem and the motivation for solving it.</li>
             <li><b>Related Work</b> - A description of prior research or work related to your project.</li>
@@ -214,7 +218,7 @@
           </ul>
           <p>
             Your final paper should be formatted using the 2 column formatting of papers that appear at IEEE VIS or ACM CHI. Although there are some differences in format between these conferences, you are free to pick from either of these. If you need help finding a formatting template talk to us.
-            <a href="https://chi2018.acm.org/chi-proceedings-format/">Formatting templates for CHI</a> are available online (use the Proceedings format, not the Extended Abstracts format).
+            <a href="http://junctionpublishing.org/vgtc/Tasks/camera.html">Formatting templates for VIS</a> are available online.
             Your paper should be between 2-4 pages, not counting references. 
           </p>
 
