--- a/FP.html
+++ b/FP.html
@@ -159,6 +159,9 @@
           <li>
             <a href="#poster">Final Project Poster Presentation</a> &nbsp; <b>5/13</b> (tentatively 3–5pm)
           </li>
+          <li>
+            <a href="#final">Final Paper</a> &nbsp; <b>due 5/15 11:59pm</b>
+          </li>
       </ul></section>
 
       <section>
@@ -192,13 +195,14 @@
         <section id="final">
           <h2>Final Deliverables</h2>
           <p>
-            Submit final deliverables in your Github Repo by <b>5/13 noon</b>.
+            All final deliverables should be in your GitHub Repo. 
+            All deliverables are due <b>5/13 at noon</b> (the final paper is due <b>5/15 at 11:59pm</b>).
           </p>
           <p>
             The final deliverables include:
           </p>
           <ul>
-            <li><b>Poster:</b> a PDF file of your poster from the presentation.</li>
+            <li><b>Interactive Poster:</b> a video or interactive web page in the style of a poster presentation.</li>
             <li><b>Paper:</b> a 2-4 page paper (not counting references) written in the form of a conference paper submission. The paper should present your goals, related work, a detailed description of your system, and a discussion of your design.</li>
             <li><b>Project Page:</b> List title, team members, summary image, abstract, link to paper, poster, running instructions for the software and other optional materials. Host the page with Github Pages.</li>
             <li><b>Readme File:</b> In the repository's <i>readme.md</i>, include a breakdown of how the work was split among the group members and a commentary on the project process.</li>
@@ -207,7 +211,7 @@
           </ul>
 
           <h3>Paper</h3>
-          <p>The final paper should be in the style of a conference paper submission. The paper might include content that is typical of papers that appear at <a href="http://ieeevis.org/">IEEE VIS</a>, or <a href="http://chi2019.acm.org/">CHI</a>. In particular it should contain:</p>
+          <p>The final paper should be in the style of a conference paper submission, and is due <b>5/15 at 11:59pm</b>. The paper might include content that is typical of papers that appear at <a href="http://ieeevis.org/">IEEE VIS</a>, or <a href="http://chi2019.acm.org/">CHI</a>. In particular it should contain:</p>
           <ul>
             <li><b>Introduction</b> – An explanation of the problem and the motivation for solving it.</li>
             <li><b>Related Work</b> - A description of prior research or work related to your project.</li>
@@ -257,16 +261,26 @@
         <section id="poster">
           <h2>Final Poster &amp; Demo Presentation</h2>
           <p>
-            We will hold a public presentation of the final projects on <b>Monday 5/13</b>. The poster session will give you a chance to show off the hard work you put into your project, and to learn about the projects of your peers. Be prepared to give a short presentation (3 min or less) at your poster to both the instructors and visitors. You should include a demo of your project along with the poster. The poster will be considered a final deliverable, so don't forget to apply visualization design principles to your poster as well as your project! The final poster should convey the following information, though you are free to decide the poster layout and headings:
-            </p><ul>
+            We will hold a public presentation of the final projects on <b>Monday 5/13</b> in the Stata Center under the origami birds. 
+            The poster session will give you a chance to show off the hard work you put into your project, and to learn about the projects of your peers.
+            Be prepared to give a short presentation (3 min or less) at your poster to both the instructors and visitors.
+          </p>
+
+          <p>
+            Each team will be assigned a free-standing 32-inch monitor with an HDMI hookup, as well as a table to setup your laptop.
+            The large monitor should be used to display an interactive poster and your audience should be able to try out your interactive visualization via the laptop.
+            We encourage you to create a 60 second video as your poster but, your interactive poster can take any form you would like (e.g., a web page with your visualization embedded and animated across different states). 
+            Regardless of its form, your poster should convey the following information:
+          </p>
+            <ul>
               <li><b>Problem:</b> A clear statement of the problem your project addresses.</li>
               <li><b>Motivation:</b> An explanation of why the problem is interesting and important.</li>
               <li><b>Approach:</b> A description of the techniques or algorithms you used to solve the problem.</li>
-              <li><b>Results:</b> Screenshots and a working demo, and an indication of how they effectively address your problem.</li>
+              <li><b>Results:</b> Animations and a working demo, and an indication of how they effectively address your problem.</li>
             </ul>
-          <p></p>
+          <p>You should not expect to have any sound playing from your poster, so be sure to include any necessary narrative elements on your poster directly (e.g., subtitles or short descriptive prose). Take a look at the <a href="https://www.youtube.com/user/acmsigchi/videos">video previews</a> from the ACM CHI 2019 conference for inspiration!</p>
           <p>
-            <b>Submission:</b> Include a PDF file for your poster in your team's GitHub repo.
+            <b>Submission:</b> Include the material for your poster (video, HTML page, etc.) in your team's GitHub repo.
           </p>
         </section>
       </section>
