Update poster session details.

--- a/FP.html
+++ b/FP.html
@@ -157,7 +157,7 @@
             <a href="#final">Final Project Deliverables</a> &nbsp; <b>due 5/13 noon</b>
           </li>
           <li>
-            <a href="#poster">Final Project Poster Presentation</a> &nbsp; <b>5/13</b> (tentatively 3–5pm)
+            <a href="#poster">Final Project Poster Presentation</a> &nbsp; <b>5/13, 3–5pm</b> (setup starts at 2:30pm)
           </li>
           <li>
             <a href="#final">Final Paper</a> &nbsp; <b>due 5/15 11:59pm</b>
@@ -261,7 +261,7 @@
         <section id="poster">
           <h2>Final Poster &amp; Demo Presentation</h2>
           <p>
-            We will hold a public presentation of the final projects on <b>Monday 5/13</b> in the Stata Center under the origami birds. 
+            We will hold a public presentation of the final projects on <b>Monday 5/13</b> in the Stata Center Student Street. 
             The poster session will give you a chance to show off the hard work you put into your project, and to learn about the projects of your peers.
             Be prepared to give a short presentation (3 min or less) at your poster to both the instructors and visitors.
           </p>
@@ -272,6 +272,9 @@
             We encourage you to create a 60 second video as your poster but, your interactive poster can take any form you would like (e.g., a web page with your visualization embedded and animated across different states). 
             Regardless of its form, your poster should convey the following information:
           </p>
+
+          <p>The poster session will run from <b>3-5pm</b> and we recommend you get to Stata by 2:30pm to locate your table, get setup, and deal with any last minute issues that inevitably crop up!</p>
+
             <ul>
               <li><b>Problem:</b> A clear statement of the problem your project addresses.</li>
               <li><b>Motivation:</b> An explanation of why the problem is interesting and important.</li>
